--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,12 +9,27 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
+    services:
+      aerospike:
+        image: aerospike/aerospike-server:latest
+        ports:
+          - 3000:3000
+        # Wait until Aerospike is ready before running tests
+        options: >-
+          --health-cmd "aql -h localhost -c 'show namespaces'" 
+          --health-interval=5s 
+          --health-timeout=5s 
+          --health-retries=10
+
     steps:
       - uses: actions/checkout@v4
+
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           java-version: '21'
           distribution: 'temurin'
-      - name: Build with Maven
+
+      - name: Build and run tests
         run: mvn -B clean test
